(STRETCH) : fixed a few minor style desicions

--- a/todo/src/components/Todo/index.css
+++ b/todo/src/components/Todo/index.css
@@ -10,6 +10,7 @@
   min-width: 600px;
   font-size: 35px;
   font-weight: 700;
+  line-height: 70px;
   background: #2255aa;
   padding: 20px 30px;
   border: 2px solid #333;
